force-app/main/default/objects/Country__c/fields/alpha2code__c.field-meta.xml
<CustomField>
    <fullName>alpha2code__c</fullName>
    <label>alpha2code</label>
    <length>55</length>
    <type>Text</type>
</CustomField>