force-app/main/default/objects/Country__c/fields/alpha3code__c.field-meta.xml
<CustomField>
    <fullName>alpha3code__c</fullName>
    <label>alpha3code</label>
    <length>55</length>
    <type>Text</type>
</CustomField>