force-app/main/default/objects/Country__c/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <label>region</label>
    <length>55</length>
    <type>Text</type>
</CustomField>